# duopow

./: .gitmodules  README.md  logo.kra  out.json  request.txt
bot/: .env.example  Cargo.toml
bot/migrations/: 20240707162613_initial.sql
bot/src/: main.rs
contract/broadcast/DuolingoPow.s.sol/167009/: run-1720479607.json  run-latest.json
contract/script/: DuolingoPow.s.sol
contract/src/: DuolingoPow.sol  IIncentive.sol  TokenIncentive.sol
contract/test/: DuolingoPow.t.sol
