[package]
name = "duolingo-pow-tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = "2.0.14"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
